--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,8 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns="https://jakarta.ee/xml/ns/jakartaee"
-   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-   xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd"
-   version="6.0">
+<web-app version="6.0" xmlns="https://jakarta.ee/xml/ns/jakartaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd">
+    <servlet>
+        <servlet-name>Ver Lista de Terminators</servlet-name>
+        <servlet-class>holamundo.VerTerminatorServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>Crear Terminator</servlet-name>
+        <servlet-class>holamundo.CrearTerminatorServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>Ver Lista de Terminators</servlet-name>
+        <url-pattern>/terminators</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Crear Terminator</servlet-name>
+        <url-pattern>/terminators/crear</url-pattern>
+    </servlet-mapping>
     <session-config>
         <session-timeout>
             30
